# animationeditor

./: .editorconfig  .gitattributes  .gitignore  .wakatime-project  CMakeLists.txt  LICENSE.md  README.md
animationeditor/: AnimationCurveEditor.cpp  AnimationCurveEditor.h  AnimationEditor.cpp  AnimationEditor.h  AnimationEditorGlobal.h  AnimationTimeScrubber.cpp  AnimationTimeScrubber.h  AnimationTimelineEditor.cpp  AnimationTimelineEditor.h  AnimationTrack.cpp  AnimationTrack.h  CMakeLists.txt  icons.qrc
sample/: CMakeLists.txt  main.cpp
