
FILE(GLOB SRCS *.cpp)
FILE(GLOB HDRS *.h)
FILE(GLOB RESOURCES *.qrc)

SOURCE_GROUP("resources" FILES ${RESOURCES} ${RSRC})
SOURCE_GROUP("" FILES ${SRCS} ${HDRS})

FIND_PACKAGE(Qt5Widgets)
SET(CMAKE_AUTOMOC ON)

QT5_ADD_RESOURCES(RESOURCE_ADDED ${RESOURCES})

ADD_LIBRARY(animationeditor SHARED
	${SRCS}
	${HDRS}
	${RESOURCE_ADDED}
)

TARGET_LINK_LIBRARIES(animationeditor
	Qt5::Widgets
)

ADD_DEFINITIONS(-DANIMATIONEDITOR_LIB)
